// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton render with cancellable false props 1`] = `
<ActionButtons
  buttons={
    Array [
      Object {
        "action": Object {
          "disabled": true,
          "onClick": [Function],
        },
        "title": "Cancel",
      },
    ]
  }
/>
`;

exports[`ActionButton render with cancellable true props 1`] = `
<ActionButtons
  buttons={
    Array [
      Object {
        "action": Object {
          "disabled": false,
          "onClick": [Function],
        },
        "title": "Cancel",
      },
    ]
  }
/>
`;

exports[`ActionButton render with resumable true props 1`] = `
<ActionButtons
  buttons={
    Array [
      Object {
        "action": Object {
          "disabled": false,
          "onClick": [Function],
        },
        "title": "Resume",
      },
    ]
  }
/>
`;
